# loco_nav

./: .gitignore  README.md  install_docker_mac.md
loco_planning/: CMakeLists.txt
loco_planning/scripts/: controller.py  params.py  planner_base.py  planner_rrt.py
loco_planning/scripts/utils/: trajectory_generator.py
map_pkg/: CMakeLists.txt
map_pkg/config/: full_config.yaml  map_config.yaml  test_config_backup.yaml
map_pkg/scripts/: spawn_borders.py  spawn_gates.py  spawn_obstacles.py
map_pkg/src/: send_borders.cpp  send_gates.cpp  send_obstacles.cpp  send_victims.cpp
planning_project/: CMakeLists.txt  README.md  package.xml
planning_project/include/: config.hpp  dubins.hpp  geometry_utils.hpp  grid_map.hpp  math_utils.hpp  multipoint_dubins.hpp  orienteering.hpp  pathfinding.hpp  planner.hpp  ros_interface.hpp  rrt_star.hpp
planning_project/plots/: README.md  plot_map.py  plot_rrt.py
planning_project/results/: .gitignore
planning_project/src/: dubins.cpp  geometry_utils.cpp  grid_map.cpp  math_utils.cpp  multipoint_dubins.cpp  orienteering.cpp  pathfinding.cpp  planner.cpp  planning_node.cpp  ros_interface.cpp  rrt_star.cpp
